# Tempest

./: .gitignore  CMakeLists.txt  README.md  SETUP.md  build.bat  setup-dev.bat
docs/: Tempest ROM Locations.txt  Tempest.asm  api-reference.md  architecture.md  asm-analysis.md  current-status.md  cursor-setup.md  development.md  game-design.md  implementation-plan.md  project-summary.md  technical-specs.md
scripts/: setup-simple.ps1  setup-windows-dev-fixed.ps1  setup-windows-dev.ps1
src/: main.cpp
src/Audio/: AudioManager.cpp  AudioManager.h  Music.cpp  Music.h  SoundEffect.cpp  SoundEffect.h
src/Core/: Component.h  EntityManager.cpp  EntityManager.h  EventSystem.cpp  EventSystem.h  GameEngine.cpp  GameEngine.h  GameState.cpp  GameState.h
src/Game/: Collision.cpp  Collision.h  Enemy.cpp  Enemy.h  Level.cpp  Level.h  LevelManager.cpp  LevelManager.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  ScoreManager.cpp  ScoreManager.h  TempestGame.cpp  TempestGame.h  TubeGeometry.cpp  TubeGeometry.h
src/Graphics/: Camera.cpp  Camera.h  GraphicsAPI.cpp  GraphicsAPI.h  Mesh.cpp  Mesh.h  MockGraphicsAPI.cpp  MockGraphicsAPI.h  OpenGLAPI.cpp  OpenGLAPI.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Sprite.cpp  Sprite.h  TempestShapes.cpp  TempestShapes.h  Texture.cpp  Texture.h  TubeRenderer.cpp  TubeRenderer.h  VectorCommand.cpp  VectorCommand.h
src/Graphics/glad/: gl.h
src/Input/: InputManager.cpp  InputManager.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/Platform/: PlatformManager.cpp  PlatformManager.h
src/Platform/Windows/: WindowsPlatform.cpp  WindowsPlatform.h
tests/unit/: TestAudioManager.cpp  TestEnemy.cpp  TestGameEngine.cpp  TestInputManager.cpp  TestLevelManager.cpp  TestPlayer.cpp  TestProjectile.cpp  TestRenderer.cpp  TestScoreManager.cpp  TestTubeRenderer.cpp
